2005-04-21  Jeremy Cowgar  <jeremy@cowgar.com>

	* tests/t_multiple_heads_msg.at: Now checks to ensure 'multiple head'
	  message does not occur on first commit (which creates a new head
	  but not multiple heads).
	* commands.cc (CMD(commit)): renamed head_size to better described
	  old_head_size, now checks that old_head_size is larger than 0 as
	  well otherwise, on commit of a brand new project, a new head was
	  detected and a divergence message was displayed.

2005-04-21  Richard Levitte  <richard@levitte.org>

	* commands.cc (ALIAS): refactor so you don't have to repeat all
	the strings given to the original command.
	(ALIAS(ci)): added as a short form for CMD(commit).

	* Makefile.am (%.eps): create .eps files directly from .ps files,
	using ps2eps.

2005-04-21 Sebastian Spaeth <Sebastian@SSpaeth.de>

	* monotone.texi: add command reference docs about kill_rev_locally
	
2005-04-21  Nathaniel Smith  <njs@codesourcery.com>

	* change_set.cc (apply_path_rearrangement_can_fastpath) 
	(apply_path_rearrangement_fastpath) 
	(apply_path_rearrangement_slowpath, apply_path_rearrangement):
	Refactor into pieces, so all versions of apply_path_rearrangement
	can take a fast-path when possible.

2005-04-21  Jeremy Cowgar  <jeremy@cowgar.com>

	* commands.cc: Renamed maybe_show_multiple_heads to
	  notify_if_multiple_heads, renamed headSize to head_size for
	  coding standards/consistency.
	* tests/t_multiple_heads_msg.at: Added to monotone this time.

2005-04-20  Jeremy Cowgar  <jeremy@cowgar.com>

	* commands.cc: Added maybe_show_multiple_heads, update now notifies
	  user of multiple heads if they exist, commit now notifies user
	  if their commit created a divergence.
	* tests/t_multiple_heads_msg.at: Added
	* testsuite.at: Added above test

2005-04-20  Nathaniel Smith  <njs@codesourcery.com>

	* Makefile.am (EXTRA_DIST): Put $(wildcard) around "debian/*", so
	it will actually work.

2005-04-20  Nathaniel Smith  <njs@codesourcery.com>
