@@ -1,9 +1,6 @@
 AT_SETUP([drop removes attributes])
 MONOTONE_SETUP
 
-# This test is a bug report.
-AT_XFAIL_IF(true)
-
 ADD_FILE(testfile, [foo bar
 ])
 AT_CHECK(MONOTONE attr set testfile some_key some_value, [], [ignore], [ignore])
@@ -14,8 +11,8 @@ AT_CHECK(grep -q some_value stdout)
 COMMIT(testbranch)
 
 AT_CHECK(MONOTONE drop testfile, [], [ignore], [ignore])
-AT_CHECK(MONOTONE attr get testfile, [1], [ignore], [ignore])
-AT_CHECK(grep -q some_key stdout)
-AT_CHECK(grep -q some_value stdout)
+AT_CHECK(MONOTONE attr get testfile, [], [stdout], [ignore])
+AT_CHECK(grep -q some_key stdout, [1])
+AT_CHECK(grep -q some_value stdout, [1])
 
 AT_CLEANUP
