@@ -170,6 +170,21 @@ build_deletions(vector<file_path> const & paths,
   extract_path_set(man, ps);
   apply_path_rearrangement(pr, ps);    
 
+  // read attribute map if available
+  file_path attr_path;
+  get_attr_path(attr_path);
+
+  data attr_data;
+  attr_map attrs;
+
+  if (file_exists(attr_path))
+  {
+    read_data(attr_path, attr_data);
+    read_attr_map(attr_data, attrs);
+  }
+
+  bool updated_attr_map = false;
+
   for (vector<file_path>::const_iterator i = paths.begin(); i != paths.end(); ++i)
     {
       bool dir_p = false;
@@ -191,12 +206,28 @@ build_deletions(vector<file_path> const & paths,
           pr_new.deleted_dirs.insert(*i);
         }
       else 
-        pr_new.deleted_files.insert(*i);
+        {
+          pr_new.deleted_files.insert(*i);
+
+          // delete any associated attributes for this file
+          if (1 == attrs.erase(*i))
+            {
+              updated_attr_map = true;
+              P(F("dropped attributes for file %s from .mt_attrs\n") % (*i) );
+            }
+        }
   }
 
   normalize_path_rearrangement(pr_new);
   concatenate_rearrangements(pr, pr_new, pr_concatenated);
   pr = pr_concatenated;
+
+  // write out updated map if necessary
+  if (updated_attr_map)
+    {
+      write_attr_map(attr_data, attrs);
+      write_data(attr_path, attr_data);
+    }
 }
 
 void 
